Fixing weird non-wrapping of search results subheaders.

--- a/app/client/src/styles/Search.scss
+++ b/app/client/src/styles/Search.scss
@@ -102,6 +102,7 @@
     .subheaderContainer {
       color: lighten($azure, 20%);
       font-size: 1.2rem;
+      white-space: normal !important;
     }
 
     .locationContainer {
